ansible/files/ocp/placement/3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placement
  namespace: openstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: placement
  template:
    metadata:
      labels:
        app: placement
      namespace: openstack
    spec:
      serviceAccountName: openstack-proto
      containers:
        - name: placement-kolla
          image: tripleotrain/rhel-binary-placement-api:current-tripleo
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
          command:
            - /bin/bash
            - -c
            - |
              rm -f /etc/httpd/conf.d/ssl.conf && \
              kolla_start
          volumeMounts:
            - mountPath: /var/lib/config-data
              readOnly: true
              name: config-data
            - mountPath: /var/lib/kolla/config_files
              readOnly: true
              name: kolla-config
      volumes:
        - name: kolla-config
          configMap:
            name: placement
            items:
              - key: kolla-config.json
                path: config.json
        - name: config-data
          configMap:
            name: placement
            defaultMode: 0444
            items:
              - key: placement.conf
                path: placement.conf
              - key: logging.conf
                path: logging.conf
              - key: httpd.conf
                path: httpd.conf
