ansible/files/ocp/placement/3/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: placement
  name: placement
  namespace: openstack
spec:
  ports:
  - name: api
    port: 8778
    protocol: TCP
  selector:
    app: placement
  type: ClusterIP
