ansible/files/ocp/placement/3/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: placement
  namespace: openstack
spec:
  host: placement.apps.ostest.test.metalkube.org
  path: /
  to:
    kind: Service
    name: placement
  port:
    targetPort: api
